# catboat

./: .dockerignore  .gitignore  .pre-commit-config.yaml  KALICO_DIFF.md  KLIPPER_DIFF.md  Makefile  README.md  catboat.service  pyproject.toml  test_config.cfg
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: cd-bleeding-edge.yaml  cd-docs.yaml  ci-build_test.yaml  ci-builder.yaml  ci-docs_test.yaml  ci-lintformat.yaml
config/: generic-bigtreetech-skr-mini-e3-v3.0.cfg  printer-anycubic-kobra-2022.cfg  printer-anycubic-kobra-max-2022.cfg  printer-anycubic-kobra-plus-2022.cfg  printer-elegoo-neptune3-pro-2023.cfg  sample-mixing-extruder.cfg
docs/: API_Server.md  Axis_Twist_Compensation.md  BLTouch.md  Beaglebone.md  Bed_Level.md  Bed_Mesh.md  Benchmarks.md  Bleeding_Edge.md  Bootloader_Entry.md  Bootloaders.md  CANBUS.md  CANBUS_Troubleshooting.md  CANBUS_protocol.md  CONTRIBUTING.md  Code_Overview.md  Command_Templates.md  Config_Changes.md  Config_Reference.md  Config_Reference_Bleeding_Edge.md  Config_checks.md  Contact.md  Danger_Features.md  Debugging.md  Delta_Calibrate.md  Dockable_Probe.md  Endstop_Phase.md  Example_Configs.md  Exclude_Object.md  FAQ.md  Features.md  G-Code_Shell_Command.md  G-Codes.md  Installation.md  Kalico_Additions.md  Kinematics.md  MCU_Commands.md  MPC.md  Manual_Level.md  Measuring_Resonances.md  Migrating_from_Klipper.md  (+21 more)
docs/_kalico/: README  mkdocs-requirements.txt  mkdocs.yml  mkdocs_hooks.py  pyproject.toml
docs/_kalico/css/: extra.css
docs/resources/: NonlinearPA_Kalico.ods
klippy/: __init__.py  clocksync.py  compat.py  configfile.py  gcode.py  klippy.py  macro.pyi  mathutil.py  mcu.py  msgproto.py  printer.py  stepper.py  toolhead.py  util.py  webhooks.py
klippy/chelper/: compiler.h  serialqueue.c
klippy/extras/: ads1220.py  adxl345.py  angle.py  axis_twist_compensation.py  bed_mesh.py  bme280.py  bus.py  canbus_stats.py  control_mpc.py  danger_options.py  dockable_probe.py  duplicate_pin_override.py  exclude_object.py  force_move.py  garbage_collection.py  gcode_macro.py  hall_filament_width_sensor.py  heaters.py  homing.py  hx71x.py  icm20948.py  lis2dw.py  lis3dh.py  load_cell.py  mixing_extruder.py  palette2.py  pid_calibrate.py  print_stats.py  probe.py  resonance_tester.py  safe_z_home.py  screws_tilt_adjust.py  shaper_calibrate.py  skew_correction.py  sx1509.py  telemetry.py  temperature_combined.py  temperature_fan.py  temperature_mcu.py  tm1637.py  (+13 more)
klippy/kinematics/: cartesian.py  corexy.py  corexz.py  delta.py  deltesian.py  extruder.py  hybrid_corexy.py  hybrid_corexz.py  limited_cartesian.py  limited_corexz.py  none.py  polar.py  rotary_delta.py  winch.py
lib/can2040/: can2040.c
scripts/: Dockerfile-build  buildcommands.py  canbus_query.py  check-gcc.sh  checkstack.py  ci-build.sh  ci-install.sh  console.py  find-firmware-extras.sh  flash_usb.py  graph_temp_sensor.py  install-arch.sh  install-centos.sh  klippy-requirements.txt  make_version.py  requirements_dev.txt  stepstats.py  whconsole.py
scripts/spi_flash/: board_defs.py  fatfs_lib.py  spi_flash.py
src/: Kconfig  Makefile  compiler.h  i2ccmds.c  spicmds.c  tm1637.c
src/atsamd/: Kconfig  Makefile
src/avr/: Makefile
src/generic/: armcm_link.lds.S  canserial.c  usb_canbus.c  usb_cdc.c
src/hc32f460/: Kconfig  main.c  serial.c
src/linux/: main.c  timer.c
src/lpc176x/: Makefile
src/pru/: Makefile
src/rp2040/: Kconfig  Makefile  spi.c
src/simulator/: internal.h
src/stm32/: Kconfig  Makefile  gpio.h  hard_pwm.c  spi.c  stm32g4.c  stm32h7.c
test/: conftest.py  klippy_testing_plugin.py  test_autosave.py  test_imports.py
test/configs/: hc32f460_anycube.config  stm32F072.config  stm32f042.config
test/klippy/: bed_mesh_check.test  commands.test  (+14 more)
(+10 files in other folders)
